Bug 489257 - Rename and update mozStorageEvents.* to mozStorageAsyncStatementExecution.* Renames the files to be more representative to what they actually contain.  This also updates the files to follow the storage style guidelines. r=asuth